[tool.poetry]
name = "gen"
version = "0.1.0"
description = ""
authors = ["Mohammad <ghms28@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.11,<3.13"
vllm = "^0.8.5.post1"
pandas = "^2.2.3"
numpy = "^2.2.5"
openpyxl = "^3.1.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
